# Hallo

./: .gitignore  .hallobase_silly.py.swp  .ircbot.py~.pAK0JZ  .mailmap  .pymegahal-brain  .travis.yml  Destination.py  Errors.py  Events.py  Function.py  FunctionDispatcher.py  FunctionRandom.py  Hallo.py  LICENSE  PermissionMask.py  README.md  Server.py  ServerFactory.py  ServerIRC.py  ServerTelegram.py  UserGroup.py  WH40K_ToTD2.txt  admininform.p  config.p  destination.py  dothis.txt  dothis2.txt  dothis3.txt  dothis_1corefix.txt  dothis_2coreimprove.txt  dothis_3commands.txt  dothis_4command_bugfix.txt  dothis_5passive.txt  dothis_bugfix.txt  dothis_coreimprove.txt  dothis_passive.txt  errors.py  euler.py  events.py  function.py  (+42 more)
config/: config-default.json  config-default.xml  config-schema.json  config.dtd  config.json  config.xml
deprecated/: megahal_mod.py
hallo/: destination.py  errors.py  events.py  function.py  function_dispatcher.py  hallo.py  permission_mask.py  server.py  server_factory.py  server_irc.py  server_telegram.py  user_group.py
inc/: Commons.py  InputParser.py  Logger.py  Printer.py  commons.py  input_parser.py  logger.py  printer.py
lib/: xmltodict.py
megahal/: shelve  testlog.txt
modules/: AsciiArt.py  Bio.py  ChannelControl.py  Convert.py  Dailys.py  Euler.py  Furry.py  Games.py  HalloControl.py  Lookup.py  Math.py  PermissionControl.py  Pokemon.py  Pony.py  Random.py  Rss.py  ServerControl.py  Silly.py  SillyEtd.py  Subscriptions.py  UserData.py  ascii_art.py  bio.py  channel_control.py  convert.py  dailys.py  euler.py  furry.py  (+11 more)
(+649 files in other folders)
